source/stylesheets/all.css.scss
@charset "utf-8";

$body-text-color: #4a525a;
$card-background-color: rgba(240, 240, 240, 1);
$box-border-color: #ddd;
$red-heart-color: #C32148;
$text-shadow-color: rgba(0,0,0,0.1);
$img-shadow-color: rgba(0,0,0,0.2);

html {
  -webkit-font-smoothing: antialiased;
}

body {
  font-family: Helvetica, Arial, sans-serif;
  color: $body-text-color;
  font-weight: 400;
  font-size: 1.1em;
}

h1, h2, h3, h4, h5, h6, h7, p {
  font-size: 1em;
  line-height: 1.75em;
  padding: 0;
  margin: 0 0 1em 0;
}

a {
  text-decoration: none;
  color: rgba(22, 51, 76, .5);
}

a:visited { color: rgba(22, 51, 76, .5); }
a:hover { color: #C32148; }

article h4 {
  font-size: 1.2em;
  font-weight: 600;
}

header {
  text-align: center;
  font-size: 1.5em;
  line-height: 1.5em;
  font-weight: 600;
}

header #title {
  text-align: left;
}

header #date {
  font-weight: 400;
}

div.section-header {
  margin: 20px 0;
}

h3.title {
  margin: 0;
  line-height: 1em;
  font-size: 2em;
  font-weight: 400;
}

h5.sub-title {
  margin: 0;
  font-size:1.2em;
  font-weight: 400;
}

article#ceremony div.card {
  margin: 10px 0;
}

#ceremony p, #ceremony h3 {
  margin: 0;
}

div.card h3.activity {
  font-size: 1.4em;
  font-weight: 600;
}

div.card p.location {
  
}

div.card p.time {
  
}

section.hero {
  background-color: rgb(255, 255, 255);
  color: rgb(74, 82, 90);
  background: url(/images/cover.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
  height: 500px;
  width: 100%;
}

div.split {
  height: 2px;
  margin: 10px 0px;
  border-bottom: 2px dotted #cecece;
}

footer {
  color: #aaa;
  text-align: center;
  margin-bottom: 20px;
}

.colorize {
  padding: 0 5px;
  color: $red-heart-color;
  text-shadow: 2px 2px 0px $text-shadow-color;
}

@media only screen
  and (min-device-width : 320px)
  and (max-device-width : 480px) {
    section.hero { height: 260px; }
    header #date { font-size: .8em; font-weight: 300; }
}

@media only screen
  and (min-device-width : 768px)
  and (max-device-width : 1024px) {
    section.hero { height: 380px; }
}

